--- a/marioplan/package.json
+++ b/marioplan/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint": "^5.7.0",
+    "firebase": "^5.5.5",
+    "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-redux-firebase": "^2.1.8",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-firestore": "^0.5.8",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
